[package]
name = "ssvm_quotes"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_quotes_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
rand="0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"